# realworld-axum-react

./: README.md
.github/: dependabot.yaml
.github/workflows/: backend.yaml  browser-test.yaml  e2e.yaml  frontend.yaml  general.yaml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  t.logs
backend/.kamal/: deploy.yaml  otel-config.yaml  secrets
backend/.kamal/hooks/: docker-setup
backend/.sqlx/: query-01159304d1ce3f0ac4aa95b8351d306bf698c4864c216b8d42fe13e116f9aab2.json  query-018f361edc18f421f85ea405e8ecc37231b681c94a297783618b2b2a1f1f899b.json  query-0419a0ff326eb632344f4ef8f1da5c63dac4f14fcff91909c564dafb31648683.json  query-07bdcf2b9ff6fc550b72b662856f1cf49ff0048175c214176ff9c127bce8f7f5.json  query-08c7149714e67ed70c815c29cccee74c625b3c8b42fca137128a0424802db24a.json  query-0e3ea5debde54328e2de13f7407132f4c8b935046c9484b7100a2c13ca6d13d0.json  query-10c1e063b7ea834bceff8093336f859b626432fcff5e8e197d13d7ae11f10bf7.json  query-113138f952b2622fb9c73a5358e95f959209def58c94d156b09d07370e9b5ac8.json  query-133325f7e7b86130e26843b2020cc34060737a56b117e3b39851f12785013f59.json  query-16db6630607c5e95ae3421d21166e5c0d53d4db8fb0731fed56595c8dd6f301f.json  query-1b73d84a3c6c40f47eec0c1ae186eee4d9d1e27308e784a5980025b34446d359.json  query-2bdbc28c62b574b228c6c781fad3d8f60578b381180d1ee71658b36995f9f8b4.json  query-2cafcba9f68996f56ac2c97d030fc385101e20d3d5ac8fbfec6d1dc975a42498.json  query-2e4ef3aa37d1dfbcf1cf041919d6043da0322e8222758ed86cc8973876263094.json  query-2e63e87435b8f3410f1704501f3ee29a5246a844819036596079efdbd138705d.json  query-2f5e2f6ad9dca66e35aaa2608cfecaae5cf964c620156961d2f4ccf4c4e71004.json  query-303a8d29ccfd9240423cc19d55b6aafdc275c8e328386ff7d61cf16fec98c843.json  query-34d6070fce70a864d4597be652d24f49dc7aa6e0079eec99ed110b497bf7ba1f.json  query-36b2d1f4011f5a684dd305c06219384be3d2c46d1c08a933f726a787812df40e.json  query-400eab5dab9cbd22078239276153f20141ba126286d5d598239bc1f31ab8c9b5.json  query-4b45e51c6e23c8e3dab12a75c8a8b57b53f35dce766076a5f38571b42550eda2.json  query-528e1636a422b59e68c91df8748b461009e8dfc5584cfe661b3e7b97426a0e75.json  query-52d3869908649b878a8741cae320f8d13e198c42186f90c7f9a4f0259d6e1542.json  query-5f6902fe2c90e5d9f726923893e6a2befb484e85ec9079325582d19d1ac33016.json  query-663933d6643c4674385dba8e459c730dff4d521a3445d073ed5d28f7af8cd761.json  query-66853adf92fa40a03c8a9e639b863d8a365cf361d2983ad1646eaed959843f13.json  query-76ca2e9d352acf69139f715676ca1570e1a827a841ce6a39ad7b77834bd578f9.json  query-7c86f9cffc505a57ea0b6adc076a7fab88c904aee3d3c7260f2cbefed3883045.json  query-82a9cdf681e581bde8a890b9d4f98f711e4e7128ba03472230c59abedca0b882.json  query-82c03d9f26fa07759751b88bd89d3dae4b58c80f7fbb4deb692cdf60b0acb4f4.json  query-870b998410c3c351c598d7bcb675418479129a6bb653f820cd8865b0084a3930.json  query-8b6c34d1713c31c40cb15b9ad27091c85ea187d0372f1090a8fed2f22231d5e4.json  query-8e2c8901e19336573ba329af3dc61fe3029436f299c0c2b12425e561f65a92ed.json  query-8f1edee7c43e35449da14076d6048d5ecb5250d19721c44fcf806f508d073635.json  query-9077b29e2918d47d48aea36e90353fc11b363f0becd055a4f4bec4fe4b4fe755.json  query-adf197efb97fc699d37e5f6c02f941e3e738c413d6767271475ec1f1d8f8b57e.json  query-b3bfdeee3ee2889cfb145305ca8b7960bbe50c67d41484db3d4da5901f544f2d.json  query-b8bf980123f41bb3b9b49b7637a9c73df90c4d09bd7791e44411f0c98fa77d00.json  query-bfeedec68fea58d3764c33630ee2788fecf92f71a503868c70e5ca3fc6a19c1c.json  query-c2910ea8140b1eb01b83fd88ab87190451954e19aebbb7672479579bc994dc46.json  (+13 more)
backend/migrations/: 0001_uuid.up.sql  0002_guard_creation_mutation_timestamps.down.sql  0002_guard_creation_mutation_timestamps.up.sql  0003_case_insensitive_collation.down.sql  0003_case_insensitive_collation.up.sql  0004_confirmation_tokens.down.sql  0004_confirmation_tokens.up.sql  0005_name=user.up.sql  0005_users.up.sql  0006_confirmation_tokens_user_id_not_null.down.sql  0006_confirmation_tokens_user_id_not_null.up.sql  0006_tokens_to_users.down.sql  0006_tokens_to_users.up.sql  0007_articles.up.sql  0008_favorites.down.sql  0008_favorites.up.sql  0009_cascade_tokens.down.sql  0009_cascade_tokens.up.sql  0010_follows.up.sql  0011_comments.up.sql
backend/migrations/dev/: seed.down.sql  seed.up.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs  openapi.rs  state.rs  telemetry.rs  templates.rs  temporal.rs  utils.rs  worker.rs
backend/src/http/: catchers.rs  cors.rs  errors.rs  extractors.rs  guards.rs  jwt.rs  mod.rs  openapi.rs  utils.rs
backend/src/http/layers/: cors.rs  mod.rs  rate.rs
backend/src/http/routes/: dev.rs  healthz.rs  mod.rs  users.rs
backend/src/http/routes/articles/: comments.rs  crud.rs  list.rs  mod.rs  tags.rs
backend/src/http/routes/users/: auth.rs  current.rs  mod.rs  profiles.rs  register.rs  utils.rs
backend/src/services/: cache.rs  captcha.rs  mailer.rs  mod.rs  moderator.rs
backend/static/: index.html  scalar.min.js
backend/templates/: email_otp.html  email_otp.txt  otp_email.html  otp_email.txt
backend/tests/api/: health.rs  main.rs  users.rs  utils.rs
backend/tests/e2e/: articles.rs  browser.rs  health.rs  main.rs  users.rs  utils.rs
backend/tests/e2e/articles/: comments.rs  crud.rs  list.rs  mod.rs
backend/tests/e2e/users/: current.rs  login.rs  mod.rs  profiles.rs  register.rs
frontend/: .env.example  .gitignore  Dockerfile  LICENSE-MIT  README.md  declarations.d.ts  eslint.config.mjs  openapi-config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.ts
frontend/.husky/: pre-commit  pre-push
frontend/.kamal/: deploy.yaml  nginx.conf  secrets
frontend/configs/: index.ts
frontend/configs/eslint/: eslint.config.base.mjs
frontend/configs/webpack/: buildDevServer.ts  buildLoaders.ts  buildPlugins.ts  buildResolvers.ts  buildWebpack.ts
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  config.ts  index.tsx  store.ts
frontend/src/Button/: Button.styles.tsx  Button.tsx  Button.types.ts
frontend/src/MainLayout/: MainLayout.styles.ts  MainLayout.tsx
frontend/src/Router/: RouterProvider.tsx
(+202 files in other folders)
