[package]
name = "realworld-axum-react"
version = "0.1.0"
edition = "2024"
authors = ["Pavel Mikhalkevich", "Dzmitry Kalatsilshchykau"]
license = "MIT OR Apache-2.0"

# There are several groups of tests in the project:
#
# - good old unit tests, which you can launch with `cargo t`;
#
# - e2e-to-end API test (integration) behind `api-test` feature flag,
#   which can be run with `cargo t --test e2e --features=api-test`
#
# - e2e-to-end FE + BE tests (browser) behind `e2e-test` feature flag,
#   which you can run  with `cargo test --test e2e --features=browser-test`
#
# All the test-suites can be launched with `cargo t --all-features`.
[features]
default = []
e2e-test = []
api-test = ["e2e-test"]
browser-test = ["e2e-test"]

[dependencies]
# -------------------------- TELEMETRY START -----------------------------------
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31.0"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "registry",
    "fmt",
    "tracing-log",
] }
tracing-bunyan-formatter = "0.3.10"
opentelemetry-appender-tracing = "0.30.1"
tracing = { version = "0.1", features = ["attributes"] }
# -------------------------- TELEMETRY END -------------------------------------

tokio = { version = "1.46.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["chrono"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "chrono",
    "postgres",
    "uuid",
] }
figment = { version = "0.10.19", features = ["env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "9.3.1", default-features = false }
anyhow = "1.0.98"
dotenvy = "0.15.7" # only used in debug mode
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
rand = "0.8"
resend-rs = { version = "0.15.0", features = [
    "rustls-tls",
], default-features = false }
secrecy = { version = "0.10.3", features = ["serde"] }
async-trait = "0.1.88"

[dev-dependencies]
base64 = "0.22.1"
fake = "4.3.0"
fantoccini = "0.22.0"
serde_json = "1.0.140"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
uuid = { version = "1.17", features = ["v4"] }
wiremock = "0.6.4"
