[package]
name = "realworld-axum-react"
version = "0.1.0"
edition = "2024"
authors = ["Pavel Mikhalkevich", "Dzmitry Kalatsilshchykau"]
license = "MIT OR Apache-2.0"

# There are several groups of tests in the project:
#
# - good old unit tests, which you can launch with `cargo t`;
#
# - e2e-to-end API test (integration) behind `api-test` feature flag,
#   which can be run with `cargo t --test e2e --features=api-test`
#
# - e2e-to-end FE + BE tests (browser) behind `e2e-test` feature flag,
#   which you can run  with `cargo test --test e2e --features=browser-test`
#
# All the test-suites can be launched with `cargo t --all-features`.
[features]
default = []
e2e-test = []
api-test = ["e2e-test"]
browser-test = ["e2e-test"]

[dependencies]
# -------------------------- TELEMETRY START -----------------------------------
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.0"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "registry",
  "fmt",
  "tracing-log",
] }
tracing-bunyan-formatter = "0.3.10"
opentelemetry-appender-tracing = "0.31.1"
tracing = { version = "0.1", features = ["attributes"] }
# -------------------------- TELEMETRY END -------------------------------------

tokio = { version = "1.48.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6.6", features = [
  "cors",
  "fs",
  "catch-panic",
  "compression-full",
  "sensitive-headers",
  "timeout",
  "limit",
] }
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.15.1", features = ["chrono"] }
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "url",
  "chrono",
  "uuid",
] }
utoipa-axum = "0.2.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "chrono",
  "postgres",
  "uuid",
] }
tower-redis-cell = { version = "0.2.0", features = ["deadpool"] }
deadpool-redis = "0.22.0"
figment = { version = "0.10.19", features = ["env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10", default-features = false, features = [
  "aws_lc_rs",
] }
anyhow = "1.0.100"
dotenvy = "0.15.7" # only used in debug mode
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
  "rustls-tls",
] }
rand = "0.9"
resend-rs = { version = "0.19", default-features = false, features = [
  "rustls-tls",
] }
secrecy = { version = "0.10.3", features = ["serde"] }
async-trait = "0.1.88"
url = { version = "2.5.4", features = ["serde"] }
askama = "0.14"
thiserror = "2.0.17"
validator = "0.20.0"
validator_derive = "0.20.0"
slug = "0.1.6"

# -------------------------- CONTENT MODERATION START  -------------------------
comrak = "0.47.0"
scraper = "0.24.0"
openai_dive = { version = "1.3.2", default-features = false, features = [
  "rustls-tls",
] }
md-5 = "0.10.6"
base64 = "0.22.1"
# -------------------------- CONTENT MODERATION END ----------------------------

# -------------------------- BACKGROUND JOBS START  ----------------------------
apalis-cron = "0.7.3"
apalis-redis = "0.7.3"
apalis = { version = "0.7.3", features = ["catch-panic", "tracing"] }
# -------------------------- BACKGROUND JOBS END  ------------------------------

[dev-dependencies]
fake = "4.3.0"
fantoccini = "0.22.0"
linkify = "0.10.0"
testcontainers-modules = { version = "0.13", features = ["postgres"] }
uuid = { version = "1.17", features = ["v4"] }
wiremock = "0.6.4"

[target.'cfg(any())'.dependencies]
# https://github.com/open-telemetry/opentelemetry-rust/issues/3169
opentelemetry-proto = "=0.31.0"
